charts/mediaserver/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  type: ClusterIP
  ports:
    - port: 7878
      targetPort: 7878
      protocol: TCP
      name: radarr-port
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: monitoring
  selector:
    app: radarr
