charts/mediaserver/radarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: radarr.png
    gethomepage.dev/name: Radarr
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - radarr.int.imdevinc.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: radarr
          namespace: mediaserver
          port: 7878
